# pg-erd-cloud

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  commit_message.txt  commit_note.txt  compose.prod.yaml  compose.yaml  design-qa.md  fix_conflict.py  fix_id_xss_3.py  fix_merge.py  fix_plan.txt  fix_plan10.txt  fix_plan11.txt  fix_plan12.txt  fix_plan13.txt  fix_plan14.txt  fix_plan15.txt  fix_plan2.txt  fix_plan3.txt  fix_plan4.txt  fix_plan5.txt  fix_plan6.txt  fix_plan7.txt  fix_plan8.txt  fix_plan9.txt  fix_strix.patch  fix_strix.sh  fix_syntax.py  format_script.py  jules_submit.py  opencode.jsonc  patch.diff  patch_conflict.py  (+30 more)
backend/: .coverage  .gitignore  Dockerfile  patch_strix.py  pyproject.toml
backend/.jules/: sentinel.md
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_auth_share.py  0003_revoked_token.py  0003_validate_project_space_fk.py  0004_billing_event.py  0004_merge_heads.py  0005_diagram_view.py  0005_llm_draft_usage_event.py  0006_table_annotation.py  0007_api_key.py
backend/app/: auth.py  auth.py.patch  billing_entitlements.py  contract_state.py  csrf.py  db.py  db_introspect.py  dsn_redaction.py  hypercorn_config.py  license_gate.py  license_tokens.py  llm_quota.py  llm_usage.py  main.py  metrics.py  models.py  models.py.patch  observability.py  permissions.py  pooler.py  rate_limit.py  redact.py  sanitize.py  schemas.py  security.py  security_headers.py  settings.py  usage_quotas.py
backend/app/api/: annotations.py  api_keys.py  auth_routes.py  billing.py  connections.py  dbml.py  diagram_views.py  me.py  projects.py  share.py  snapshots.py
backend/app/ddl/: export.py  migration.py  migration_safety.py
backend/app/diff/: __init__.py  schema_diff.py
backend/app/integrations/: clearfolio.py
backend/app/jobs/: snapshot_job.py  valkey_queue.py  worker.py
backend/app/mysql_introspect/: __init__.py  introspect.py
backend/app/pg_introspect/: column_examples.py  dsn_guard.py  forward_ddl.py  introspect.py  queries.py
backend/app/snowflake_introspect/: introspect.py  introspect.py.orig  introspect.py.rej
backend/app/spec/: __init__.py  audit_columns.py  constraint_inventory.py  data_dictionary.py  dbml_import.py  (+14 more)
backend/fuzz/: README.md  _snapshot.py  fuzz_ddl_export.py  fuzz_dsn_guard.py  fuzz_dsn_redaction.py  fuzz_spec_generators.py
backend/tests/: conftest.py  test_api_annotations.py  test_api_apply_sql.py  test_api_connection_test.py  test_api_connections.py  test_api_diagram_views.py  test_api_keys.py  test_api_me.py  test_api_share.py  test_api_snapshot_diff.py  test_api_snapshots.py  test_audit_columns.py  test_auth_security.py  test_auth_ssrf.py  test_billing_usage.py  test_clearfolio.py  test_column_examples.py  test_constraint_inventory.py  test_csrf_middleware.py  test_data_dictionary.py  test_db.py  test_db_introspect.py  test_dbml_import.py  test_ddl_export.py  test_docstrings.py  test_down_migration.py  test_dsn_guard.py  test_dsn_redaction.py  test_fk_cycles.py  test_fuzz_properties.py  test_graphql_sdl.py  test_index_design.py  test_index_redundancy.py  test_license_gate.py  test_license_tokens.py  test_main_rate_limit_wiring.py  test_metrics.py  test_migration.py  test_migration_safety.py  test_models.py  (+29 more)
(+233 files in other folders)
