[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "pg-erd-cloud-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.137.1",
  "hypercorn>=0.18.0",
  "prometheus-client>=0.25.0,<0.26.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.49,<2.1",
  "asyncpg>=0.31.0",
  "psycopg[binary]>=3.3.4",
  "alembic>=1.18.4",
  "cryptography>=46.0.7",
  "httpx>=0.28.1",
  "python-jose[cryptography]>=3.5.0",
  "redis>=5.0.0",
  "pyjwt>=2.13.0",
  "starlette>=1.1.0",
  "urllib3>=2.7.0",
  "aiohttp>=3.14.1",
  "requests>=2.33.0",
  "python-multipart>=0.0.31",
]

[project.optional-dependencies]
snowflake = [
  "snowflake-connector-python>=3.18.0,<4",
]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "mypy>=1.10.0",
  "asyncpg-stubs>=0.31.0",
  "types-python-jose>=3.5.0.20260408",
  "types-requests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true
